2010-02-17 Gustavo Noronha Silva <gustavo.noronha@collabora.co.uk>

Reviewed by Xan Lopez.

        Does not send an Accept header for subresources, causing some sites to break
        https://bugs.webkit.org/show_bug.cgi?id=33242

        Set */* as the Accept header when downloading resources
        that did not set an Accept header. This behaviour is similar to
        the one adopted by Chromium.

        Test: http/tests/misc/image-checks-for-accept.html

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::startHttp):

Canonical link: https://commits.webkit.org/46199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54892 268f45cc-cd09-0410-ab3c-d52691b4dbfc