third_party/WebKit/LayoutTests/http/tests/misc/resources/image-checks-for-accept.php
@@ -1,0 +1,14 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<?php
+    if($_SERVER["HTTP_ACCEPT"] == "*/*" || $_SERVER["HTTP_ACCEPT"] == "image/*" || $_SERVER["HTTP_ACCEPT"] == "image/jpg")
+    {
+        header("Content-Type: image/jpg");
+        header("Cache-Control: no-store");
+        header("Connection: close");
+
+        $fn = fopen("compass.jpg", "r");
+        fpassthru($fn);
+        fclose($fn);
+        exit;
+    }
+?>
